--- a/CryptoMarket/src/components/Navbar/Navbar.css
+++ b/CryptoMarket/src/components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     padding: 20px 10%;
     color: #ddd;
-    border-bottom: 2px solid #3c3c3c;
+    
     }
     .navbar ul{
         display: flex;
@@ -44,4 +44,40 @@
     }
     .navbar button img{
         width: 13px;
+    }
+    @media (max-width: 900px) {
+        .navbar{
+            padding: 20px 8%;
+        }
+        .navbar button{
+            gap: 8px;
+            padding: 8px 18px;
+            font-size: 14px;
+        }
+    }
+    @media (max-width: 768px){
+        .navbar{
+            padding: 20px 5%;
+
+        }
+        .navbar ul{
+            display: none;
+        }
+    .navbar button img{
+        width: 12px;
+    }
+    }
+    @media (max-width: 500px){
+        .navbar{
+            padding: 20px 3%;
+            gap: 10px;
+
+        }
+        .navbar button {
+            gap: 10px;
+        }
+        .navbar button img{
+            width: 20px;
+        }
+        
     }
