--- a/CryptoMarket/src/pages/Home/Home.css
+++ b/CryptoMarket/src/pages/Home/Home.css
@@ -1,10 +1,10 @@
 .home{
     padding: 0px 10px;
-    padding-bottom: 100px;
+    padding-bottom: 40px;
 }
 .hero{
     max-width: 600px;
-    margin: 80px auto;
+    margin: 40px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,7 +12,7 @@
     gap: 30px;
 }
 .hero h1{
-    font-size: max(4vw, 36px);
+    font-size: max(4vw, 24px);
 }
 .hero p{
     width: 75%;
@@ -24,11 +24,11 @@
     width: 80%;
     background-color: white;
     border-radius: 5px;
-    font-size: 20px;
+    font-size: 14px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 10px;
+    gap: 8px;
 
 }
 .hero input{
@@ -36,30 +36,31 @@
     font-size: 16px;
     outline: none;
     border: none;
-    padding-left: 10px;
+    padding-left: 5px;
 
 }
 .hero button{
     border: none;
-    background-color: #7927ff;
+    background-color:black;
     color: white;
-    font-size: 16px;
+    font-size: 14px;
     padding:10px 30px;
     border-radius: 5px;
     cursor: pointer;
 }
 .crypto-table{
-    max-width: 800px;
+    max-width: 900px;
     margin: auto;
-    background: linear-gradient(rgba(84,3 255,0.15), rgba(105, 2, 153, 0.15));
+    background:white;
+    color: #000;
     border-radius: 15px;
 }
 .table-layout{
     display: grid;
     grid-template-columns: 0.5fr 2fr 1fr 1fr 1.5fr;
-    padding: 15px 20px;
+    padding: 20px 15px;
     align-items: center;
-    border-bottom:1px solid #3c3c3c;
+    
 }
 .market-cap{
     text-align: right;
@@ -87,4 +88,24 @@
 .table-layout .red{
     color: #ff4646;
     text-align: center;
+}
+@media (max-width: 768px){
+    .table-layout{
+        grid-template-columns: 0.5fr 3fr 1fr 1fr;
+    }
+    .market-cap{
+        display: none;
+    }
+
+}
+@media (max-width: 500px){
+    .table-layout div img{
+        width:  25px;
+    }
+    .table-layout{
+        font-size: 13px;
+    }
+    .hero form input{
+        width: 100px;
+    }
 }
